[metadata]
name = pyamps
author = Karl M. Laundal
author_email = karl.laundal@ift.uib.no
version = attr: pyamps.__version__
url = https://github.com/klaundal/pyAMPS
description = Calculate and plot maps of the model Average Magnetic field and Polar current System (AMPS)
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
license = MIT
keywords = 
    AMPS
    Average Magnetic field and Polar current System
    magnetic field
    spherical harmonics model
    associated Legendre polynomial
    mlt
    magnetic local time
    subsolar
    dipole coordinates
    converting
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
install_requires = 
    numpy>=1.13
    matplotlib>=2.0
    scipy>=0.19
    pandas>=0.20
    dask>=0.15
    apexpy>=1.0

[options.package_data]
pyamps = 
    coefficients/model_coefficients.csv
    coefficients/model_vector_NT_MT_NV_MV_65_3_45_3.npy

[options.packages.find]
exclude =
    tests
    docs

[options.extras_require]
dev = 
    sphinx>=1.3
    sphinx_pypi_upload
test = pytest

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html
