[metadata]
name = pyamps
author = Karl M. Laundal
author_email = karl.laundal@ift.uib.no
version = attr: pyamps.__version__
url = https://github.com/klaundal/pyAMPS
description = Calculate and plot maps of the model Average Magnetic field and Polar current System (AMPS)
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
license = MIT
keywords = 
    AMPS
    Average Magnetic field and Polar current System
    magnetic field
    spherical harmonics model
    associated Legendre polynomial
    mlt
    magnetic local time
    subsolar
    dipole coordinates
    converting
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
install_requires = 
    setuptools>=30.3.0
    future>=0.16
    numpy>=1.14
    matplotlib
    scipy>=0.9
    toolz>=0.8
    dask
    pandas>=0.20
    apexpy>=1.0
[options.package_data]
pyamps = 
    coefficients/model_coefficients.txt
    coefficients/model_vector_NT_MT_NV_MV_65_3_45_3.npy

[options.packages.find]
exclude =
    tests
    docs

[options.extras_require]
dev = 
    sphinx>=1.3
    sphinx_pypi_upload
test = pytest

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html
